reintroduce native threads for the updater as a setting and cleanup